clang/test/BSC/Negative/Ownership/TemplateInstantiation/generic_owned_borrow_instantiation.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test _Owned/_Borrow qualifiers on generic template instantiation

struct ClassOwned<T> {
    _Owned T member;   // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

void test_class_owned() {
    struct ClassOwned<int*> obj1;   // OK: int* can be _Owned
    struct ClassOwned<int> obj2;    // expected-note {{in instantiation of template class 'ClassOwned<int>' requested here}}
}

struct ClassBorrow<T> {
    _Borrow T member;    // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
};

void test_class_borrow() {
    int x;
    struct ClassBorrow<int*> obj1={&_Mut x};  // OK: int* can be borrowed
    struct ClassBorrow<int> obj2;   // expected-note {{in instantiation of template class 'ClassBorrow<int>' requested here}}
}

int main() {
    return 0;
}
